hotfix: fix alt image & change to more contrast color

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-card: hsl(332, 97%, 50%);
+  --primary-card: hsl(332, 97%, 69%);
   --white: hsl(0, 0%, 100%);
   --grey: hsl(0, 0%, 20%);
   --dark-grey: hsl(0, 0%, 12%);
